--- a/WomanCyc/res/values-ru/help.xml
+++ b/WomanCyc/res/values-ru/help.xml
@@ -28,7 +28,7 @@
 (Не забывайте снова сохранить файл после редактирования.)<BR/><BR/>
 
 <I> * Автоматизированная система бэкапов.</I>
-Делайте бэкапы данных на SD-карту устройства и переносите их на другие устройства, отправляйте по email, в Dropbox и т.&nbsp;п.<BR/><BR/>
+Делайте бэкапы данных на SD-карту устройства и переносите их на другие устройства, отправляйте по email, и т.&nbsp;п.<BR/><BR/>
 
 <I> * Редактирование порций данных.</I>
 Данные сохраняются в читаемом формате в xml-файл,
