--- a/WomanCyc/res/values/help.xml
+++ b/WomanCyc/res/values/help.xml
@@ -11,7 +11,7 @@
 <![CDATA[
 "Menu items <B>&laquo;Menu-Save data&raquo;</B> (export) and <B>&laquo;Menu-Restore data&raquo;</B> (import).<BR/><BR/>
 
-Files for export and import are stored in root of SD-card, in directory "WomanCyc". If you clear data of the application or uninstall the application then these files will not be deleted.<BR/><BR/>
+Files for export and import are stored in root of SD-card, in directory WomanCyc. If you clear data of the application or uninstall the application then these files will not be deleted.<BR/><BR/>
 
 You can enter file name or select existing file from the list.<BR/><BR/>
 
@@ -28,7 +28,7 @@ Save data into files with different names and restore the data for editing.
 (Don't forget save data after editing again.)<BR/><BR/>
 
 <I> * backup data.</I>
-Make backups of data to SD-card and move the data to another devices, send it by email, save to Dropbox, etc.<BR/><BR/>
+Make backups of data to SD-card and move the data to another devices, send it by email, etc.<BR/><BR/>
 
 <I> * edit pieces of data.</I>
 Data is saved in readable format to xml-file,
@@ -63,7 +63,7 @@ then setup password in <B>&laquo;Menu-Settings-Password&raquo;</B>.<BR/><BR/>
 
 <I> * You can send password by email to yourself in order to restore it if you will forget it.</I>
 If you select menu item <B>&laquo;Menu-Settings-Send password by email&raquo;</B> the mail application will be opened.
-Email address of the device owner will be in the field "To"
+Email address of the device owner will be in the field To
 (this field will be empty on some devices, in this case you should enter email address by yourself).<BR/><BR/>
 
 <I> * If you forgot password, and:</I><BR/><BR/>
