--- a/WomanCyc/res/values/about.xml
+++ b/WomanCyc/res/values/about.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
     <string name="google_app_name">WomanCyc</string>
-    <string name="yandex_app_name">WomanCyc</string>
+    <string name="yandex_app_name">"WomanCyc: calendar of woman's cycle"</string>
     <string name="google_marketing_message">"WomanCyc: calendar of woman's cycle"</string>
     <string name="description">
 <![CDATA[
