--- a/app/src/main/res/layout/dialog_numberpicker.xml
+++ b/app/src/main/res/layout/dialog_numberpicker.xml
@@ -5,7 +5,7 @@
     android:gravity="center"
     android:padding="@dimen/view_padding">
 
-    <com.anna.sent.soft.numberpickerlibrary.NumberPicker
+    <NumberPicker
         android:id="@+id/numberPicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
