--- a/app/src/main/res/values/strings_untr.xml
+++ b/app/src/main/res/values/strings_untr.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="adUnitId" translatable="false">ca-app-pub-7437124433510999/9336754466</string>
+    <string name="adMobAppId" translatable="false">ca-app-pub-7437124433510999~6383288063</string>
 </resources>
